--- a/index.html
+++ b/index.html
@@ -57,5 +57,50 @@
         </div>
       </div>
     </section>
+
+    <section class="container we__offer">
+      <div class="we__offer_card">
+        <img src="images/item1.png" alt="" />
+        <div class="we__offer_content">
+          <h2>Order Online</h2>
+          <p>Stay home and ordere to your door</p>
+        </div>
+      </div>
+
+      <div class="we__offer_card">
+        <img src="images/item2.png" alt="" />
+        <div class="we__offer_content">
+          <h2>Dining</h2>
+          <p>View the city's favourite dining venus</p>
+        </div>
+      </div>
+
+      <div class="we__offer_card">
+        <img src="images/item3.png" alt="" />
+        <div class="we__offer_content">
+          <h2>Nightlife and Clubs</h2>
+          <p>Explore the city's top nightlife outlets</p>
+        </div>
+      </div>
+
+      <div class="we__offer_card">
+        <img src="images/item4.png" alt="" />
+        <div class="we__offer_content">
+          <h2>Nightlife and Clubs</h2>
+          <p>Explore the city's top nightlife outlets</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="conatainer collections">
+      <h1>Collections</h1>
+      <div class="sub__heading_container">
+        <span
+          >Explore curated lists of top resturants, cafes, pubs, and barsin,
+          Bangalore</span
+        >
+        <span>All Collections in Bangalore</span>
+      </div>
+    </section>
   </body>
 </html>
