--- a/index.html
+++ b/index.html
@@ -135,5 +135,116 @@
         </div>
       </div>
     </section>
+
+    <section class="conatainer get__the_app">
+      <div class="semiConatiner">
+        <div class="left">
+          <img src="images/mobileBanner.png" alt="" />
+        </div>
+        <div class="right">
+          <h1>Get the Zomato App</h1>
+          <p>
+            We will send you a link, open it on your phone to download the app
+          </p>
+          <div class="radio__buttons_conatiner">
+            <div>
+              <input type="radio" name="download_app" id="email" />
+              <label for="email" style="font-size: 14px">Email</label>
+            </div>
+            <div>
+              <input type="radio" name="download_app" id="phone" />
+              <label for="phone" style="font-size: 14px">Phone</label>
+            </div>
+          </div>
+          <div class="input_conatiner">
+            <input type="text" placeholder="Email" />
+            <button>Share App Link</button>
+          </div>
+          <div class="download__app_container">
+            <h5>Download App Form</h5>
+            <div>
+              <img src="images/appleStore.png" alt="" />
+              <img src="images/playStore.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="container footer">
+      <div class="footer_section1">
+        <img src="images/logo.png" alt="" />
+        <div class="section1__buttonContainer">
+          <button>
+            <img
+              src="https://flagcdn.com/w40/in.png"
+              alt="Indian Flag"
+              style="width: 17px"
+            />
+            India
+          </button>
+          <button><i class="fa-solid fa-globe"></i>English</button>
+        </div>
+      </div>
+      <div class="navigation_container">
+        <div class="link__container">
+          <h5>ABOUT ZOMATO</h5>
+          <a href="#" class="footer__link">Who we are</a>
+          <a href="#" class="footer__link">Blogs</a>
+          <a href="#" class="footer__link">Work with us</a>
+          <a href="#" class="footer__link">Investor Relations</a>
+          <a href="#" class="footer__link">Report Fraud</a>
+          <a href="#" class="footer__link">Contact Us</a>
+        </div>
+
+        <div class="link__container">
+          <h5>ZOMAVERSE</h5>
+          <a href="#" class="footer__link">Zomato</a>
+          <a href="#" class="footer__link">Feeding</a>
+          <a href="#" class="footer__link">Hyperpure</a>
+          <a href="#" class="footer__link">Zomaland</a>
+        </div>
+
+        <div class="link__container">
+          <h5>FOR RESTURANTS</h5>
+          <a href="#" class="footer__link">Partner With Us</a>
+          <a href="#" class="footer__link">Apps For You</a>
+          <br />
+          <h5>ENTERPRICES</h5>
+          <a href="#" class="footer__link">Work with us</a>
+          <a href="#" class="footer__link">Zomato For Work</a>
+        </div>
+
+        <div class="link__container">
+          <h5>LEARN MORE</h5>
+          <a href="#" class="footer__link">Privacy</a>
+          <a href="#" class="footer__link">Security</a>
+          <a href="#" class="footer__link">Terms</a>
+          <a href="#" class="footer__link">Site Map</a>
+        </div>
+
+        <div class="link__container">
+          <h5>SOCIAL LINKS</h5>
+          <div class="section__links_container">
+            <button><i class="fa-brands fa-linkedin-in"></i></button>
+            <button><i class="fa-brands fa-instagram"></i></button>
+            <button><i class="fa-brands fa-twitter"></i></button>
+            <button><i class="fa-brands fa-youtube"></i></button>
+            <button><i class="fa-brands fa-facebook"></i></button>
+          </div>
+          <br />
+          <img
+            src="images/appleStore.png"
+            alt=""
+            class="footer__scetion_logos"
+          />
+          <img
+            src="images/playStore.png"
+            alt=""
+            class="footer__scetion_logos"
+          />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
